<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailsActivity"
    tools:showIn="@layout/activity_details">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:textSize="@dimen/title_size"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:id="@+id/title"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/upa_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/content_size"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/street"
        android:text="@string/upa_street" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/content_size"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/district"
        android:text="@string/upa_district" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/content_size"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/city"
        android:text="@string/upa_city" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/content_size"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/black"
        android:id="@+id/state"
        android:text="@string/upa_state" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_size"
                android:id="@+id/porte"
                android:text="@string/upa_porte"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_info_outline_black_24dp"
                android:clickable="true"
                />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/call_button"
            android:drawableLeft="@drawable/ic_call_white_24dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:textSize="@dimen/content_size"
            android:text="@string/phone_number"
            android:paddingLeft="45dp"
            android:paddingRight="50dp"
            />
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/call_button"
            android:drawableLeft="@drawable/ic_directions_white_24dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:textSize="@dimen/content_size"
            android:text="@string/getroute"
            android:paddingLeft="45dp"
            android:paddingRight="30dp"
            />



    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
