<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".InfoActivity"
    tools:showIn="@layout/activity_info">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        card_view:cardBackgroundColor="#DEF9F9F9"
        card_view:cardUseCompatPadding="true"
        android:clickable="true"
        android:focusable="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/content_size"
            android:id="@+id/porte1_tag"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/upa_porte1_tag"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:textColor="@color/darkGrey"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv2"
        android:layout_marginBottom="10dp"
        card_view:cardBackgroundColor="#DEF9F9F9"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="2dp"
        android:clickable="true"
        android:focusable="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/content_size"
            android:id="@+id/porte2_tag"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/upa_porte2_tag"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:textColor="@color/darkGrey"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv3"
        android:layout_marginBottom="10dp"
        card_view:cardBackgroundColor="#DEF9F9F9"
        card_view:cardUseCompatPadding="true"
        android:clickable="true"
        android:focusable="true"
        >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/content_size"
            android:id="@+id/porte3_tag"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/upa_porte3_tag"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:textColor="@color/darkGrey"/>



    </android.support.v7.widget.CardView>

</LinearLayout>
